<package>
  <name>oro_action_server</name>
  <version>2.6.0</version>
  <description>
  Implementation of Action Server for orocos components.
  </description>
  <author>Konrad Banachowicz</author>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/oro_action_server</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rtt</build_depend>

  <run_depend>actionlib</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>

</package>


