<package>
  <name>xeno_clock</name>
  <version>2.6.0</version>
  <description>

     xeno_clock

  </description>
  <author>Konrad Banachowicz</author>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/xeno_clock</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <cpp cflags="-I${prefix}/include" lflags="`if [ &quot; $OROCOS_TARGET&quot; = &quot;xenomai&quot; ]; then echo -Wl,@/opt/xenomai/lib/posix.wrappers -L/opt/xenomai/lib -lpthread_rt -lxenomai -lpthread -lrt; fi`"/>
  </export>
</package>


